# openfang

./: AGENTS.md  Cargo.toml  RELEASE_NOTES.md  env-guide.md  feature-list.json  init.sh  long-task-guide.md  task-progress.md
.github/workflows/: release.yml
agents/orchestrator/: agent.toml
crates/openfang-agents/: Cargo.toml
crates/openfang-agents/src/: bundled.rs  lib.rs  registry.rs
crates/openfang-agents/templates/data-analyst/: AGENT.toml  SOUL.md
crates/openfang-agents/templates/devops-engineer/: AGENT.toml  SOUL.md
crates/openfang-agents/templates/oh-my-opencode/: AGENT.toml  BOOTSTRAP.md  SOUL.md
crates/openfang-agents/templates/security-expert/: AGENT.toml  SOUL.md
crates/openfang-agents/templates/superpower/: AGENT.toml  BOOTSTRAP.md  SOUL.md
crates/openfang-agents/templates/technical-writer/: AGENT.toml  SOUL.md
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: rate_limiter.rs  routes.rs  server.rs  types.rs  webchat.rs
crates/openfang-api/static/: index_body.html  index_head.html
crates/openfang-cli/: Cargo.toml
crates/openfang-cli/src/: launcher.rs  main.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: kernel.rs  lib.rs  swarm.rs  swarm_condition.rs  swarm_mapping.rs  swarm_parser.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-types/src/: lib.rs  orchestrator.rs  swarm.rs
docs/plans/: 2025-03-28-agent-swarm-design.md  2025-03-30-orchestrator-design.md
docs/templates/: st-case-template.md
examples/: README.md
scripts/: .long-task-plugin-root  validate_features.py  validate_guide.py
(+287 files in other folders)
