[package]
name = "openfang-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent templates marketplace for OpenFang — expert agent blueprints"

[dependencies]
openfang-types = { path = "../openfang-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
